[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-x-acp"
version = "0.1.0"
authors = [
  { name="Henry", email="henry@example.com" },
]
description = "MCP Server for OpenClaw to fetch X.com threads and articles"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.2.0",
    "twikit>=2.3.0",
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "browser-cookie3>=0.19.1"
]

[project.scripts]
openclaw-x-acp = "openclaw_x_acp.server:main"
openclaw-x-acp-setup = "openclaw_x_acp.installer:run_setup"

[tool.setuptools.packages.find]
where = ["src"]
